Closed Bug 510656 Opened 15 years ago Closed 15 years ago

OS/2 breaks in widget after checkin for bug507334

Categories

(Core :: General, defect)

x86
OS/2
defect
Not set
major

Tracking

()

RESOLVED FIXED
Tracking Status
status1.9.2 --- beta1-fixed

People

(Reporter: wuno, Assigned: dragtext)

References

Details

Attachments

(1 file, 1 obsolete file)

User-Agent:       Mozilla/5.0 (OS/2; U; Warp 4.5; en-US; rv:1.9.1.2) Gecko/20090802 Firefox/3.5.2
Build Identifier: 

bug507334 optimized scrolling, OS/2 widget nsWindow.{h,cpp} have to be adjusted probably similar to those of the windows version in https://bug507334.bugzilla.mozilla.org/attachment.cgi?id=394258

Reproducible: Always
Blocks: 507334
Version: unspecified → Trunk
Assignee: nobody → dragtext
This will let us build the trunk again.  Scrolling seems slower & more jerky with plugin windows than previously.  I tried sending the WM_VRNDISABLED msg from different locations in the code, as well as adding & removing calls to Update(), but performance remained the same.
A big, big "oops"!  I just discovered I was testing using my old build, not the one which incorporates this patch.  It builds and works but performance with plugins (especially mplayer) is really poor.
This version works much better, especially for the mplayer plugin when its window doesn't have to be resized.

Sadly, the known bugs remain:
- plugins aren't clipped when first displayed
- the mplayer plugin resizes its output every time the plugin widget's clipping rectangle changes
Attachment #394694 - Attachment is obsolete: true
Comment on attachment 394753 [details] [diff] [review]
improved update for nsWindow::Scroll()

Even if you didn't ask for review, this is meant to be pushed, right?

I don't have time to fully study and understand the code but I trust you. (I'll fix a few style issues those when pushing. See the recently updated https://developer.mozilla.org/En/Developer_Guide/Coding_Style#Naming_and_Formatting_code)
Attachment #394753 - Flags: review+
http://hg.mozilla.org/mozilla-central/rev/ab23fe9b73e9
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
As bug 507334 landed on 1.9.2 I have pushed this into that branch, too:
http://hg.mozilla.org/releases/mozilla-1.9.2/rev/0f99e4fda7d5
(This early branching is a mess!)
Keywords: fixed1.9.2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: