[OS/2] Bug 510656 - fix nsWindow::Scroll following bug 507334, r=pweibacher